2010-06-09  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #14677: htmlArea RTE: Toolbar state incorect in the absence of block element
	* Follow-up to issue #14662: htmlArea RTE: Should use t3lib_utility_Client::getBrowserInfo

2010-06-09  Steffen Kamper  <info@sk-typo3.de>

	* Added test case for #14663: t3lib_utility_Client::getBrowserInfo returns gecko build date rather than version
	* Fixed bug #14663: t3lib_utility_Client::getBrowserInfo returns gecko build date rather than version
	* Fixed bug #14673: Usage of debug() in BE use group *line* by default
	* Fixed bug #14674: Replace calls to t3lib_extMgm:: within t3lib_extMgm to self:: due to performance reasons (Thanks to Sebastian Michaelsen)
	* Fixed bug #14676: Replace calls to t3lib_iconWorks:: within t3lib_iconWorks to self:: due to performance reasons (Thanks to Sebastian Michaelsen)
	* Fixed bug #14675: Replace calls to t3lib_BEfunc:: within t3lib_BEfunc to self:: due to performance reasons (Thanks to Sebastian Michaelsen)
	* Follow-up to bug #13611: Replace calls to t3lib_div:: within t3lib_div to self:: du to performance reasons (Thanks to Sebastian Michaelsen)
	* Fixed bug #14555: early thrown debug messages are not visible (BE only) (Thanks to Stefan Galinski)
	* Fixed bug #14628: Open t3lib_db for own instance
	* Follow-up to bug #8305: SQL debug output is not shown in the Backend
	* Fixed bug #14618: Bug: Add debug feature to Ext Direct (Thanks to Fabien Udriot)
	* Follow-up to bug #8305: SQL debug output is not shown in the Backend
	* Added test case t3lib_utility_clientTest.php
	* Fixed bug #14458: getBrowserInfo fails with IE UA Strings

2010-06-09  Christian Kuhn  <lolli@schwarzbu.ch>

	* Added feature #14666: Caching framework: Backport PhpFrontend from FLOW3 and refactor FileBackend
	* Added feature #14655: Caching framework: Implement PDO backend

2010-06-08  Stanislas Rolland  <typo3@sjbr.ca>

	* Updated htmlArea RTE manual.